Fixed whitespace in browser. Added more text next to picture of me

--- a/Assests/style.css
+++ b/Assests/style.css
@@ -150,8 +150,6 @@ body {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  margin-left: -1.5rem;
-  margin-right: -1.5rem;
   padding: 1.5rem;
 }
 
